[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celeste-api"
version = "0.1.0"
description = "HTTP API for the Celeste UI (capabilities, models, and operations)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Celeste Maintainers" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "sse-starlette>=1.6.1",
  "celeste-client>=0.1.0",
]

[tool.ruff]
line-length = 100

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
celeste-client = { workspace = true }
celeste-core = { workspace = true }
