[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celeste-api"
version = "0.1.0"
description = "HTTP API for the Celeste UI (capabilities, models, and operations)."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Celeste Maintainers" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "sse-starlette>=1.6.1",
  "httpx>=0.27.0",
  # Celeste modules used by the API
  "celeste-client>=0.1.0",
  "celeste-core>=0.1.0",
  "celeste-image-generation>=0.1.0",
  "celeste-image-edit>=0.1.0",
  "celeste-video-generation>=0.1.0",
]

[tool.ruff]
line-length = 100

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
celeste-client = { git = "https://github.com/celeste-kai/celeste-client.git" }
celeste-core = { git = "https://github.com/celeste-kai/celeste-core.git" }
celeste-image-generation = { git = "https://github.com/celeste-kai/celeste-image-generation.git" }
celeste-image-edit = { git = "https://github.com/celeste-kai/celeste-image-edit.git" }
celeste-video-generation = { git = "https://github.com/celeste-kai/celeste-video-generation.git" }
